trymito: fix spacing on mobile

--- a/trymito.io/styles/ExcelToPython.module.css
+++ b/trymito.io/styles/ExcelToPython.module.css
@@ -34,7 +34,7 @@
     font-style: normal;
     font-weight: 400;
     margin-top: 2rem;
-    font-size: 1.75rem;
+    font-size: 2rem;
 }
 
 .excel_to_python_table {
